--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/roeyb/breeze#readme",
   "dependencies": {
     "crypto": "0.0.3",
+    "csv-parse": "^1.1.7",
     "redis": "^2.6.3",
     "socket.io": "^1.7.1",
     "socket.io-client": "^1.7.1"
